<resources>
    <string name="app_name">MDSample</string>
    <string name="action_settings">setting</string>

    <string name="search">搜索</string>
    <string name="search_result">SearchResult</string>

    <string name="hint_search">please input the search content&#8230;</string>

    <string name="snow">北国风光，\n千里冰封，\n万里雪飘。\n望长城内外，\n惟余莽莽；\n大河上下，\n顿失滔滔。\n山舞银蛇，\n原驰蜡象，\n欲与天公试比高。(原驰 原作：原驱)\n须晴日，\n看红装素裹，\n分外妖娆。(红装 一作：银装)\n江山如此多娇，\n引无数英雄竞折腰。\n惜秦皇汉武，\n略输文采；\n唐宗宋祖，\n稍逊风骚。\n一代天骄，\n成吉思汗，\n只识弯弓射大雕。\n俱往矣，\n数风流人物，\n还看今朝。</string>
    <string name="text">2013年3月17日晚，中共中央台办为采访“两会”的台湾各媒体举行招待酒会，招待酒会由中共中央台办副主任叶克冬主持。刚刚卸任台办主任的王毅专程来到现场与台湾媒体朋友话别。王毅感谢台湾媒体朋友这几年对台办工作的理解和支持，感谢大家为两岸关系发展所尽的力量、所做的贡献。
王毅说，我在台办工作了58个月、1700多天。这期间，我最感到欣慰的是，在两岸同胞共同努力下，台海风平浪静，两岸和平发展，交流全面展开，合作不断深化，两岸关系发生的历史性变化，让全世界中华儿女松了一口气，为此击掌喝彩。两岸关系取得的一系列成果，给两岸同胞尤其是台湾同胞带来了实实在在的利益。尽管今后仍然要面对各种难题和挑战，但可以肯定地说：方向已经明确，道路已经开辟，光明就在前面！
王毅说，我最感到遗憾的是，一直没有机会到台湾去走走看看。我曾跟很多台湾朋友讲，台办，就是为台湾同胞办事的部门。我们的各级台办首先要为在大陆工作生活的台湾同胞办实事，同时也要为在岛内的更广大台湾同胞谋福祉。不少台湾朋友曾盛情邀请我，我感铭在心。事实上，这几年，仅省部级干部就有1500多个代表团赴台。当然，我知道，中央台办主任访台并不那么简单，岛内可能还有一些人对此有不同意见。但是，我虽没有踏上台湾的土地，但我的心是和台湾同胞连在一起的。每天，我都在观看台湾的电视，浏览台湾的报刊，尤其是和来到大陆的台湾各界人士沟通交流。作为台办主任，我每天所思所想的都是台湾发生的事情，每天所做所为的都是希望推进两岸关系向前发展，这是我的职责，也是我的工作。
王毅表示，经历了这58个月，不管我今后在什么地方工作,都会对台湾同胞多一份挂念、多一份理解、多一份责任，都会为两岸关系的发展，为我们民族的复兴继续尽我的一份心力。[7]
台湾问题
2013年09月20日，中国外长王毅在美国首都华盛顿表示，中方希望美方切实理解和尊重中国反对分裂，致力于和平统一的努力，把台湾问题从中美关系的负资产变成正资产。
王毅20日在美国知名智库布鲁金斯学会发表演讲时做上述表示。就任外长前，王毅曾于2008年至2013年担任中共中央台湾工作办公室、国务院台湾事务办公室主任。
王毅在当天的演讲中专门提及台湾问题。他强调，台湾问题事关中国的主权和领土完整，事关13亿中国人的民族感情。当前，两岸关系保持和平发展势头，要和平不要战争、要合作不要对抗、要交往不要隔绝已是两岸同胞的人心所向。
“两岸在相互往来合作中逐渐彼此融合，直至实现最终统一将是谁也无法阻挡的历史潮流。”王毅说。
王毅表示，多年来，台湾问题始终是中美关系中损害互信、干扰合作的一项负资产。如果美方能够顺应两岸关系和平发展的大势，切实理解和尊重中国反对分裂，致力于和平统一的努力，那么台湾问题就会从中美关系的负资产变成正资产，从消极因素变成积极因素，就能为中美关系长期稳定发展提供保障，为中美开展全方位合作开辟前景。[8] </string>

    <string name="india_national">　
     印度人的心和命运都由你管辖，\n
　　你的名字使全国奋发，\n
　　旁遮普、辛德、吉甲拉特、马拉塔、\n
　　达罗毗荼、奥利萨、孟加拉；\n
　　文底那、喜马拉雅发出回响，\n
　　朱木拿、恒河奏乐回答，\n
　　印度洋的波浪唱着歌，\n
　　向你颂赞向你祝福，\n
　　一切人都等你拯拔。\n
　　印度人的心和命运都由你管辖，\n
　　你永远无敌于天下。\n</string>


    <!-- 测试字符串资源 -->
    <string name="simple_string">simple string</string>

    <string name="single_quoted_string">"single quoted'string"</string>
    <!-- <string name="str">single quoted'string</string> 该行编译时会报错：error: Apostrophe not preceded by \ (in single quoted'string)	-->
    <string name="single_quoted_string2">single quoted\'string</string>

    <string name="double_quoted_string">\"double quotes\"</string>
    <string name="double_quoted_string2">"double quotes"</string>
    <!-- 	<string name="str3">'"double quotes"'</string> 该行编译会报错-->

    <string name="format_string">
	    Hello, I am %2$d years old, My name is %1$s.
	</string>

    <string name="tagged_string1">	<!-- 通过getText()方法获取有样式效果，或者在其他xml文件中通过@string/引用也有效果  -->
        <b>Bold</b>, <i>italic</i>, <u>underline</u>.
	</string>
    <string name="tagged_string2">	<!-- 通过getString()获取后，通过Html.fromHtml()方法处理好有效果 -->
        &lt;b>Bold&lt;/b>, &lt;i>italic&lt;/i>, &lt;u>underline&lt;/u>.
	</string>
    <string name="tagged_string3">	<!-- 通过getString()获取后，通过Html.fromHtml()方法处理好有效果 -->
        <![CDATA[
	      		<b>Bold</b>, <i>italic</i>, <u>underline</u>.
	      		<br/>
	      		<h1>font</h1>
	      ]]>
	</string>

    <string name="format_tagged_string">Hello, %1$s! You have &lt;b>%2$d new messages&lt;/b>.</string>


    <!-- To support arrays -->
    <string-array name="test_array">
        <item>one</item>
        <item>two</item>
        <item>three</item>
        <item>@string/simple_string</item>    <!-- 引用其他string资源 -->
        <item>"single quoted'string"</item>
        <item>single quoted\'string</item>
        <item>\"double quotes\"</item>
        <item>"double quotes"</item>
    </string-array>


    <!-- To support plurals -->
    <plurals name="test_plurals">
        <item quantity='one'>You are one</item>
        <item quantity='other'>You are many</item>
    </plurals>

    <string name="start_or_pause">开始/暂停</string>

    <!--传输外线-->
    <string name="transmissionline_structwell">人手井</string>
    <string name="transmissionline_structpole">电杆</string>
    <string name="transmissionline_structstone">标石</string>
    <string name="transmissionline_tranbox">光交接箱</string>
    <string name="transo_supportpoint">撑点</string>
    <string name="transo_jointbox">光接头盒</string>
    <string name="transo_terminalbox">光终端盒</string>
    <string name="wiredaccess_fiberbox">光分纤箱</string>
    <string name="jiazhong">加载中...</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="readfire_message_title">阅后即焚</string>
    <string name="accessible_point">可接入点</string>
    <string name="space_equiproom">机房</string>
    <string name="accessible_line">可接入线路</string>
    <string name="layingsegment">敷设段</string>
    <string name="cablesegment">光缆段</string>


</resources>
