<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_corner"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="5dp"
            android:text="@string/prompt"
            android:textColor="#333"
            android:textSize="20sp"
            android:visibility="gone" />


        <TextView
            android:id="@+id/alert_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="31dp"
            android:layout_marginTop="32dp"
            android:fadeScrollbars="false"
            android:gravity="center_horizontal"
            android:maxHeight="320dp"
            android:padding="5dp"
            android:scrollbars="vertical"
            android:textColor="#151515"
            android:textSize="17sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_0.5"
            android:background="@color/color_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#fff"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#ff3333"
                android:textSize="17sp"
                android:visibility="gone" />

            <View
                android:id="@+id/divider"
                android:layout_width="0.5dp"
                android:layout_height="50dp"
                android:background="@color/color_divider"
                android:visibility="gone" />

            <TextView
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#fff"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="#00bcd4"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
